[tool.poetry]
name = "ffreedom-expenses"
version = "0.1.0"
description = ""
authors = ["Alvaro Aguilar <alvaro.aguilar.lopez@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
